--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light dark" />
     <title>Закрывающий тег</title>
-    <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="./images/apple-touch-icon.png" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="stylesheet" href="./styles/themes.css" />
-
+    <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="./images/favicon.ico" sizes="any" /> <!--без данного link - не проходят автотесты, но с ним не меняется цвет иконки (сансей в группе советовал убрать данную строку)-->
+    <link rel="apple-touch-icon" href="./images/apple-touch-icon.png" />
     <script src="./scripts/set-theme.js"></script>
   </head>
   <body class="page">
@@ -87,7 +87,7 @@
         <!--Иконки-->
         <div class="card__buttons">
           <!--Иконка-сердце-->
-          <button class="card__icon-button" aria-labelledby="like-button">
+          <button class="card__icon-button">
             <svg
             class="like-icon"
             width="39" 
@@ -175,7 +175,7 @@
         <!--Иконки-->
         <div class="card__buttons">
           <!--Иконка-сердце-->
-          <button class="card__icon-button" aria-labelledby="like-button">
+          <button class="card__icon-button">
             <svg
             class="like-icon"
             width="39" 
@@ -261,7 +261,7 @@
         <!--Иконки-->
         <div class="card__buttons">
           <!--Иконка-сердце-->
-          <button class="card__icon-button" aria-labelledby="like-button">
+          <button class="card__icon-button">
             <svg
             class="like-icon"
             width="39" 
@@ -349,7 +349,7 @@
         <!--Иконки-->
         <div class="card__buttons">
           <!--Иконка-сердце-->
-          <button class="card__icon-button" aria-labelledby="like-button">
+          <button class="card__icon-button">
             <svg
             class="like-icon"
             width="39" 
@@ -438,7 +438,7 @@
         <!--Иконки-->
         <div class="card__buttons">
           <!--Иконка-сердце-->
-          <button class="card__icon-button" aria-labelledby="like-button">
+          <button class="card__icon-button">
             <svg
             class="like-icon"
             width="39" 
@@ -498,7 +498,7 @@
           3 спринт: Обходные стратегии
         </h2>
         <!--Картинка-->
-        <div class="card__image filter__gray">
+        <div class="card__image filter__multiple">
           <div class="card__image-text">
             &lt;support&gt;
           </div>
@@ -524,7 +524,7 @@
         <!--Иконки-->
         <div class="card__buttons">
           <!--Иконка-сердце-->
-          <button class="card__icon-button" aria-labelledby="like-button">
+          <button class="card__icon-button">
             <svg
             class="like-icon"
             width="39" 
@@ -612,7 +612,7 @@
         <!--Иконки-->
         <div class="card__buttons">
           <!--Иконка-сердце-->
-          <button class="card__icon-button" aria-labelledby="like-button">
+          <button class="card__icon-button">
             <svg
             class="like-icon"
             width="39" 
@@ -672,7 +672,7 @@
           «Сейчас я здесь»
         </h2>
         <!--Картинка-->
-        <div class="card__image filter__multiple">
+        <div class="card__image filter__gray">
           <div class="card__image-text">
             &lt;experience&gt;
           </div>
@@ -701,7 +701,7 @@
         <!--Иконки-->
         <div class="card__buttons">
           <!--Иконка-сердце-->
-          <button class="card__icon-button" aria-labelledby="like-button">
+          <button class="card__icon-button">
             <svg
             class="like-icon"
             width="39" 
