--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <a class="header__title-text" href="#" alt="Логотип HTML">
-        &lt;/html&gt;
-      </a>
+      <a class="header__title-text" href="#"> &lt;/html&gt; </a>
       <h1 class="header__title">Закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
@@ -52,13 +50,14 @@
     <main class="main">
       <!-- 1 карточка -->
       <article class="cards">
-        <!--Декоративная надпись-->
-        <span class="card__title">
+        <!--Заголовок-->
+        <h2 class="card__title">
           Фритрек и нулевой спринт: Подготовка к работе
-        </span>
+        </h2>
         <!--Картинка-->
         <div class="card__image filter__bright">
-          <div class="card__image-text">&lt;/HTML&gt;</div>
+          <!--Декоративная надпись-->
+          <span class="card__image-text">&lt;/HTML&gt;</span>
           <img
             class="card__image-filter-default card-image__all"
             src="./images/car-post.jpg"
@@ -136,11 +135,12 @@
 
       <!-- 2 карточка -->
       <article class="cards">
-        <!--Декоративная надпись-->
-        <span class="card__title"> 1 спринт: Я — чистый лист </span>
+        <!--Заголовок-->
+        <h2 class="card__title">1 спринт: Я — чистый лист</h2>
         <!--Картинка-->
         <div class="card__image filter__sepia">
-          <div class="card__image-text">&lt;/HTML&gt;</div>
+          <!--Декоративная надпись-->
+          <span class="card__image-text">&lt;/HTML&gt;</span>
           <img
             class="card__image-filter-default card-image__all"
             src="./images/car-post.jpg"
@@ -220,11 +220,12 @@
 
       <!-- 3 карточка -->
       <article class="cards">
-        <!--Декоративная надпись-->
-        <span class="card__title"> 1 спринт: А если не получится? </span>
+        <!--Заголовок-->
+        <h2 class="card__title">1 спринт: А если не получится?</h2>
         <!--Картинка-->
         <div class="card__image filter__saturate">
-          <div class="card__image-text">&lt;CSS&gt;</div>
+          <!--Декоративная надпись-->
+          <span class="card__image-text">&lt;CSS&gt;</span>
           <img
             class="card__image-filter-default card-image__all"
             src="./images/car-post.jpg"
@@ -302,11 +303,12 @@
 
       <!-- 4 карточка -->
       <article class="cards">
-        <!--Декоративная надпись-->
-        <span class="card__title"> 2 спринт: Погоня за идеалом </span>
+        <!--Заголовок-->
+        <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
         <!--Картинка-->
         <div class="card__image filter__hue-rotate">
-          <div class="card__image-text">&lt;desigions&gt;</div>
+          <!--Декоративная надпись-->
+          <span class="card__image-text">&lt;desigions&gt;</span>
           <img
             class="card__image-filter-default card-image__all"
             src="./images/car-post.jpg"
@@ -386,11 +388,12 @@
 
       <!-- 5 карточка -->
       <article class="cards">
-        <!--Декоративная надпись-->
-        <span class="card__title"> 2 спринт: О тех, кто рядом </span>
+        <!--Заголовок-->
+        <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
         <!--Картинка-->
         <div class="card__image filter__invert">
-          <div class="card__image-text">care</div>
+          <!--Декоративная надпись-->
+          <span class="card__image-text">care</span>
           <img
             class="card__image-filter-default card-image__all"
             src="./images/car-post.jpg"
@@ -471,11 +474,12 @@
 
       <!-- 6 карточка -->
       <article class="cards">
-        <!--Декоративная надпись-->
-        <span class="card__title"> 3 спринт: Обходные стратегии </span>
+        <!--Заголовок-->
+        <h2 class="card__title">3 спринт: Обходные стратегии</h2>
         <!--Картинка-->
         <div class="card__image filter__multiple">
-          <div class="card__image-text">&lt;support&gt;</div>
+          <!--Декоративная надпись-->
+          <span class="card__image-text">&lt;support&gt;</span>
           <img
             class="card__image-filter-default card-image__all"
             src="./images/car-post.jpg"
@@ -553,11 +557,12 @@
 
       <!-- 7 карточка -->
       <article class="cards">
-        <!--Декоративная надпись-->
-        <span class="card__title"> 3 спринт: Когда опускаются руки </span>
+        <!--Заголовок-->
+        <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
         <!--Картинка-->
         <div class="card__image">
-          <div class="card__image-text">&lt;lifes-style: none;&gt;</div>
+          <!--Декоративная надпись-->
+          <span class="card__image-text">&lt;lifes-style: none;&gt;</span>
           <img
             class="card__image-filter-default card-image__all filter__blur"
             src="./images/car-post.jpg"
@@ -744,12 +749,12 @@
       </div>
 
       <dialog class="dialog" id="dialog">
-        <form class="dialog__form" method="dialog">
+        <div class="dialog__form">
           <svg class="dialog__floppy" viewBox="0 0 40 40">
             <use href="./svg/image.svg#floppy"></use>
           </svg>
           <p class="dialog-text">Вставьте дискету, чтобы продолжить</p>
-        </form>
+        </div>
         <form method="dialog">
           <button class="dialog__button settings-button" type="submit">
             <span class="button__text"> ок </span>
